# hybrid_crypto_project

./: .gitignore  2.txt  Makefile  README.md  benchmark.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test.txt.enc
hybrid_crypto_project/: __init__.py  cli.py  config.py  main.py
hybrid_crypto_project/core/: __init__.py
hybrid_crypto_project/core/classical/: __init__.py  key_manager.py  rsa.py
hybrid_crypto_project/core/hybrid/: __init__.py  hybrid_engine.py  payload.py
hybrid_crypto_project/core/post_quantum/: __init__.py  base.py  factory.py  kyber_adapter.py  mock_adapter.py
hybrid_crypto_project/core/storage/: __init__.py  s3_client.py
hybrid_crypto_project/core/symmetric/: __init__.py  aes_gcm.py
hybrid_crypto_project/core/utils/: __init__.py  file_handler.py  logger.py
hybrid_crypto_project/scripts/: benchmark.py
tests/: test_aes.py  test_hybrid.py  test_payload_container.py  test_pq.py  test_rsa.py  test_s3.py
