[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid_crypto_project"
version = "1.0.0"
description = "Production-grade hybrid cryptography system with mandatory post-quantum security"
requires-python = ">=3.12"
authors = [ { name = "hybrid team" } ]
readme = "README.md"
dependencies = [
    "cryptography>=43.0.0",
    "boto3>=1.36.0",
    "typer>=0.15.1",
]

[project.scripts]
hybrid-crypto = "hybrid_crypto_project.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hybrid_crypto_project*"]

[project.urls]
Homepage = "https://example.invalid/"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ARG"]
